infra/kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: totp-manager
  labels:
    app.kubernetes.io/name: totp-manager
    app.kubernetes.io/component: web
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: totp-manager
      app.kubernetes.io/component: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: totp-manager
        app.kubernetes.io/component: web
    spec:
      securityContext:
#        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: app
          image: totp-manager:latest
          ports:
            - name: http
              containerPort: 8000
          startupProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 3
            failureThreshold: 20
          readinessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 20
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              cpu: 100m
              memory: 192Mi
            limits:
              cpu: "1"
              memory: 384Mi
---
apiVersion: v1
kind: Service
metadata:
  name: totp-manager
  labels:
    app.kubernetes.io/name: totp-manager
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: totp-manager
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 8000
      targetPort: http
